<resources>
    <string name="app_name">CMI Open Day</string>
    <string name="opendaybutton">more information</string>
    <string name="OpenDay_Test">CMI Open Day, %s\n12:00 – 16:00\nSoftware Engineering, Computer Engineering, Communication</string>
    <string name="OpenDay_Test2">CMI Open Day, %s\n17:00 – 20:00\nSoftware Engineering, Communication</string>
    <string name="open_days">Open Days</string>
    <string name="OpenDay_Informatica" translatable="false">H.04.208/ 12:00 – 16:00\nWijnhaven 107</string>
    <string name="Technische_Informatica">Computer Engineering</string>
    <string name="OpenDay_Technische_Informatica" translatable="false">H.03.108/ 12:00 – 16:00\nWijnhaven 107</string>
    <string name="CMGT" translatable="false">CMGT</string>
    <string name="OpenDay_CMGT" translatable="false">WD.05.018/ 12:00 – 16:00\nWijnhaven 103</string>
    <string name="Communicatiewetenschappen">Communication</string>
    <string name="OpenDay_Communicatiewetenschappen" translatable="false">WN.01.014/ 12:00 – 16:00\nWijnhaven 99</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="shareString">Share using what?</string>
    <string name="shareBody1">On</string>
    <string name="shareBody2">, I am going to an open day at the CMI of the Rotterdam University of Applied Sciences! Learn more at https://www.hogeschoolrotterdam.nl/</string>
    <string name="calendarMessage">Opening calendar…</string>
    <string name="calendarTitle">CMI Open Day</string>
    <string name="calendarBody">CMI Open Day of</string>
    <string name="aboutcmi_location" translatable="false">Wijnhaven 99–103–107</string>
    <string name="aboutcmi_phoneNumber">Phone number: 010 – 794 4000</string>
    <string name="aboutcmi_website" translatable="false">Url: Hogeschoolrotterdam.nl</string>
    <string name="aboutcmi_questionForm">QUESTION FORM</string>
    <string name="aboutcmi_textHeader" translatable="false">Hogeschool Rotterdam (CMI)</string>
    <string name="aboutcmi_floorplan">FLOORPLAN</string>
    <string name="aboutcmi_courses">COURSES</string>
    <string name="floorplan_location" translatable="false">Wijnhaven 99-103-107</string>
    <string name="floorplan_up" translatable="false">+</string>
    <string name="floorplan_down" translatable="false">-</string>
    <string name="Communication_and_Multimedia_Design" translatable="false">Communication and Multimedia Design</string>
    <string name="Creative_Media_and_Game_Technologies" translatable="false">Creative Media and Game Technologies</string>
    <string name="Informatica">Software Engineering</string>
    <string name="aboutcmi_content">The School of Communication, Media and Information Technology (CMI) provides higher education and applied research for the creative industry. As a committed partner CMI creates knowledge, skills and expertise for the ongoing development of the industry.\n\nCMI has five undergraduate programmes\n\nSoftware engineering\nComputer engineering\nCreative Media and Game Technologies\nCommunication &amp; Multimedia Design\nCommunication\nEach bachelor programme focuses on adding meaningful values to daily life by the use of communication, media or information technology. Students are being challenged to develop their competences such as creativity, entrepreneurship and interdisciplinary collaboration.\n\nOur education is practice driven and can be found throughout all years of our courses: practical cases and issues as a group assignment, embedded in education modules or advanced minors and electives, individual internships and graduate studies, but also in the form of guest lectures, workshops and business safaris (i.e. a trip where students visit multiple companies from an exploratory perspective).\n\nWe are constantly looking for themes in which cooperation with companies and universities is possible. The fresh view and up-to-date knowledge of our students often leads to innovative concepts, advanced insights and prototypes that are highly useful.\n\nCMI is closely linked to research group Creating 010, that conducts applied research to better utilize the potential of the creative industry in Rotterdam.</string>
    <string name="Communicatie">Communication</string>
    <string name="credits1">CMI OPEN DAY APP © INF1C GROUP 9\non behalf of:</string>
    <string name="credits2">Deborah Barnett\nAstrid van Duuren\n\nDeveloped by:\n\nMohamed Abdi\nAzzeddine Agrida\nHakan Dalama\nAudi van Gog\nLucas Oudhuis\nDinesh Pahladsingh\nBastiaan te Veldhuis\n\nSpecial thanks to:\n\nEddie Lau\nLars Mostert\nJason Teo</string>
    <string name="logo_of_school">Logo of School</string>
</resources>