<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FloorPlanActivity">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@android:color/holo_red_dark"
            android:elevation="4dp"
            android:src="@drawable/logohr"
            android:theme="@style/ThemeOverlay.AppCompat.Dark"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="36dp"
            android:background="@color/secondary3"
            android:orientation="vertical"
            android:paddingBottom="50dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0">

            <TextView
                android:id="@+id/textView4"
                android:layout_width="match_parent"
                android:layout_height="68dp"
                android:gravity="center"
                android:text="@string/floorplan_location"
                android:textColor="@color/textDark2"
                android:textSize="30sp"
                android:textStyle="bold"
                app:fontFamily="sans-serif" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/accent"
                android:orientation="horizontal"
                android:padding="8dp">

                <Button
                    android:id="@+id/upButton"
                    android:layout_width="24dp"
                    android:layout_height="40dp"
                    android:layout_weight="1"
                    android:background="@drawable/round_button"
                    android:text="@string/floorplan_up"
                    android:textColor="@color/textLight"
                    android:textSize="24dp" />

                <TextView
                    android:id="@+id/textView7"
                    android:layout_width="250dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/floorplan_floor"
                    android:textColor="@color/textLight"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/downButton"
                    android:layout_width="24dp"
                    android:layout_height="40dp"
                    android:layout_weight="1"
                    android:background="@drawable/round_button"
                    android:text="@string/floorplan_down"
                    android:textColor="@color/textLight"
                    android:textSize="24dp" />

            </LinearLayout>

            <ScrollView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:scrollbarStyle="insideInset">

                <HorizontalScrollView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <ImageView
                        android:id="@+id/imageView3"
                        android:layout_width="wrap_content"
                        android:layout_height="600dp"
                        android:layout_gravity="center"
                        android:layout_weight="1"
                        android:adjustViewBounds="true"
                        android:cropToPadding="false"
                        android:scaleType="fitXY"
                        android:src="@drawable/wijnhaven103_4"
                        android:visibility="visible" />
                </HorizontalScrollView>
            </ScrollView>
        </LinearLayout>
    </android.support.constraint.ConstraintLayout>

    <android.support.design.widget.NavigationView
        android:id="@+id/sidebar_view"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:visibility="gone"
        app:headerLayout="@layout/sidebare_header"
        app:menu="@menu/sidebare_menu"
        tools:visibility="gone" />

</android.support.v4.widget.DrawerLayout>